--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: 1400px;
+  max-width: 1440px;
   margin: auto;
   font-family: "Roboto";
   font-style: normal;
@@ -38,10 +38,14 @@ a:active {
   left: 23px;
   top: 20px;
 }
+@media (min-width: 1050px) {
+  .nav__arrow {
+    top: 35px;
+  }
+}
 .nav__headlogo {
   display: flex;
   justify-content: center;
-  background-color: white;
   height: 63px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -49,8 +53,19 @@ a:active {
   font-weight: 400;
   font-size: 30px;
 }
+@media (min-width: 1050px) {
+  .nav__headlogo {
+    height: 96px;
+    font-size: 35px;
+  }
+}
 .nav__headlogo__text {
   margin-top: 14px;
+}
+@media (min-width: 1050px) {
+  .nav__headlogo__text {
+    margin-top: 30px;
+  }
 }
 
 .header_img {
@@ -58,6 +73,11 @@ a:active {
   height: 275px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media (min-width: 1050px) {
+  .header_img {
+    height: 380px;
+  }
 }
 
 /* Main */
@@ -69,6 +89,16 @@ a:active {
   position: relative;
   bottom: 50px;
 }
+@media (min-width: 1050px) {
+  .main {
+    max-width: 1050px;
+    margin: auto;
+    margin-bottom: -50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .main__name {
   display: flex;
   flex-direction: row;
@@ -78,6 +108,11 @@ a:active {
   margin-bottom: 30px;
   margin-left: 4px;
 }
+@media (min-width: 1050px) {
+  .main__name {
+    justify-content: center;
+  }
+}
 .main__name__text {
   font-family: "Shrikhand";
   font-weight: 400;
@@ -86,8 +121,21 @@ a:active {
 .main__name__icone:hover {
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 }
+@media (min-width: 1050px) {
+  .main__name__icone {
+    margin-left: 25px;
+    font-size: 23px;
+  }
+}
 .main__section {
   padding-bottom: 28px;
+}
+@media (min-width: 1050px) {
+  .main__section {
+    max-width: 635px;
+    width: 635px;
+    margin: auto;
+  }
 }
 .main__section__title {
   font-weight: 300;
@@ -163,11 +211,27 @@ a:active {
   padding-top: 22px;
   padding-bottom: 15px;
 }
+@media (min-width: 1050px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: end;
+    padding: 0px;
+    padding-bottom: 30px;
+    padding-right: 60px;
+    height: 114px;
+  }
+}
 .footer__logo {
   font-size: 18px;
   color: white;
   font-family: "Shrikhand";
   margin-bottom: 18px;
+}
+@media (min-width: 1050px) {
+  .footer__logo {
+    margin: 0px;
+  }
 }
 .footer__ul {
   list-style: none;
@@ -176,8 +240,19 @@ a:active {
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 1050px) {
+  .footer__ul {
+    flex-direction: row;
+  }
+}
 .footer__ul__li {
   margin-bottom: 7px;
+}
+@media (min-width: 1050px) {
+  .footer__ul__li {
+    margin: 0px;
+    margin-right: 30px;
+  }
 }
 .footer__ul__li__link {
   display: flex;
