--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -3,6 +3,9 @@
 $color-primary : #9356DC;
 $color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1050px;
+
 
 /* Reset CSS */
 
@@ -11,7 +14,7 @@ $color-tertiary : #99E2D0;
 }
 
 body {
-    max-width: 1400px;
+    max-width: 1440px;
     margin: auto;
     font-family: 'Roboto';
     font-style: normal;
@@ -45,19 +48,28 @@ a {
         position: absolute;
         left: 23px;
         top: 20px;
+        @media (min-width: $breakpoint-desktop) {
+            top: 35px;
+        }
     }
     &__headlogo {
         display: flex;
         justify-content: center;
-        background-color: white;
         height: 63px;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
         text-align: center;
         font-family: 'Shrikhand';
         font-weight: 400;
         font-size: 30px;
+        @media (min-width: $breakpoint-desktop) {
+            height: 96px;
+            font-size: 35px;
+        }
         &__text {
             margin-top: 14px;
+            @media (min-width: $breakpoint-desktop) {
+                margin-top: 30px;
+            }
         }
     }
 }
@@ -66,6 +78,9 @@ a {
     width: 100%;
     height: 275px;
     object-fit: cover;
+    @media (min-width: $breakpoint-desktop) {
+        height: 380px;
+    }
 }
 
 /* Main */
@@ -77,6 +92,14 @@ a {
     margin-bottom: -50px;
     position: relative;
     bottom: 50px;
+    @media (min-width: $breakpoint-desktop) {
+        max-width: $breakpoint-desktop;
+        margin: auto;
+        margin-bottom: -50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
     &__name {
         display: flex;
         flex-direction: row;
@@ -85,6 +108,9 @@ a {
         margin-right: 28px;
         margin-bottom: 30px;
         margin-left: 4px;
+        @media (min-width: $breakpoint-desktop) {
+            justify-content: center;
+        }
         &__text {
             font-family: 'Shrikhand';
             font-weight: 400;
@@ -94,10 +120,19 @@ a {
             &:hover {
                 background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
             }
+            @media (min-width: $breakpoint-desktop) {
+                margin-left: 25px;
+                font-size: 23px;
+            }
         }
     }
     &__section {
         padding-bottom: 28px;
+        @media (min-width: $breakpoint-desktop) {
+            max-width: 635px;
+            width: 635px;
+            margin: auto;
+        }
         &__title {
             font-weight: 300;
             font-size: 16px;
@@ -174,11 +209,23 @@ a {
     padding-left: 25px;
     padding-top: 22px;
     padding-bottom: 15px;
+    @media (min-width: $breakpoint-desktop) {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: end;
+        padding: 0px;
+        padding-bottom: 30px;
+        padding-right: 60px;
+        height: 114px;
+    }
     &__logo {
         font-size: 18px;
         color: white;
         font-family: 'Shrikhand';
         margin-bottom: 18px;
+        @media (min-width: $breakpoint-desktop) {
+            margin: 0px;
+        }
     }
     &__ul{
         list-style: none;
@@ -186,8 +233,15 @@ a {
         padding: 0;
         display: flex;
         flex-direction: column;
+        @media (min-width: $breakpoint-desktop) {
+            flex-direction: row;
+        }
         &__li {
             margin-bottom: 7px;
+            @media (min-width: $breakpoint-desktop) {
+                margin: 0px;
+                margin-right: 30px;
+            }
             &__link {
                 display: flex;
                 flex-direction: row;
