--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -30,6 +30,66 @@ a:active {
   text-decoration: none;
 }
 
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: loader-vanish 1s 1.5s both;
+}
+
+.dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #9356DC;
+  margin: 0 15px;
+  animation: loader infinite 0.3s alternate;
+}
+
+.d2 {
+  animation-delay: 0.05s;
+  background: #FF79DA;
+}
+
+.d3 {
+  animation-delay: 0.1s;
+  background: #99E2D0;
+}
+
+@keyframes loader {
+  100% {
+    transform: translateY(-30px);
+  }
+}
+@keyframes loader-vanish {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+  }
+}
+header, main {
+  animation: hide-body 1.5s 1.5s both;
+}
+
+@keyframes hide-body {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /* Header */
 .headlogo {
   display: flex;
@@ -277,25 +337,56 @@ a:active {
   font-weight: 300;
   font-size: 17px;
 }
-.main__section__card__description__bis {
-  display: flex;
-  flex-direction: row;
-  margin-right: 25px;
+.main__section__card__description__container__heart {
+  font-size: 24px;
 }
-.main__section__card__description__bis__new {
+.main__section__card__description__container__heart--bis {
+  font-size: 24px;
   position: relative;
-  bottom: 175px;
-  left: 10px;
-  height: 29px;
-  width: 80px;
-  background-color: #99E2D0;
-  color: #008766;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  left: 18px;
+}
+.main__section__card__description__container__heart-solid {
+  position: relative;
+  right: 29px;
+  top: 1px;
+  font-size: 26px;
+  opacity: 0;
+}
+.main__section__card__description__container__heart-solid--bis {
+  position: relative;
+  right: 11px;
+  top: 1px;
+  font-size: 26px;
+  opacity: 0;
+}
+.main__section__card__description__container__heart-solid--bis:hover {
+  background: linear-gradient(200deg, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 300ms ease-in-out;
+  opacity: 1;
+}
+.main__section__card__description__container__heart-solid:hover {
+  background: linear-gradient(200deg, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 300ms ease-in-out;
+  opacity: 1;
+}
+.main__section__card__description__container__new {
+  position: relative;
+  right: 20px;
+  bottom: 200px;
+  padding: 7px 9px 7px 9px;
+  background: #99E2D0;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   border-radius: 2px;
+  font-weight: 500;
+  font-size: 14px;
+  text-align: center;
+  color: #008766;
 }
 
 /* Footer */
