--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -39,6 +39,70 @@ a {
     }
 }
 
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: loader-vanish 1s 1.5s both;
+}
+
+.dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: $color-primary;
+    margin: 0 15px;
+    animation: loader infinite 0.3s alternate;
+}
+
+.d2 {
+    animation-delay: 0.05s;
+    background: $color-secondary;
+}
+
+.d3 {
+    animation-delay: 0.1s;
+    background: $color-tertiary;
+}
+
+@keyframes loader {
+    100% {
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes loader-vanish {
+    from {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+        display: none;
+    }
+}
+
+header, main {
+    animation: hide-body 1.5s 1.5s both;
+}
+
+@keyframes hide-body {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 /* Header */
 
 .headlogo {
@@ -259,24 +323,57 @@ a {
                     font-weight: 300;
                     font-size: 17px;
                 }
-                &__bis {
-                    display: flex;
-                    flex-direction: row;
-                    margin-right: 25px;
+                &__container {
+                    &__heart {
+                        font-size: 24px;
+                        &--bis {
+                            font-size: 24px;
+                            position: relative;
+                            left: 18px;
+                        }
+                    }
+                    &__heart-solid {
+                        position: relative;
+                        right: 29px;
+                        top: 1px;
+                        font-size: 26px;
+                        opacity: 0;
+                        &--bis {
+                            position: relative;
+                            right: 11px;
+                            top: 1px;
+                            font-size: 26px;
+                            opacity: 0;
+                            &:hover {
+                                background: linear-gradient(200deg, $color-primary, $color-secondary);
+                                background-clip: text;
+                                -webkit-background-clip: text;
+                                color: transparent;
+                                transition: all 300ms ease-in-out;
+                                opacity: 1;
+                            }
+                        }
+                        &:hover {
+                            background: linear-gradient(200deg, $color-primary, $color-secondary);
+                            background-clip: text;
+                            -webkit-background-clip: text;
+                            color: transparent;
+                            transition: all 300ms ease-in-out;
+                            opacity: 1;
+                        }
+                    }
                     &__new {
                         position: relative;
-                        bottom: 175px;
-                        left: 10px;
-                        height: 29px;
-                        width: 80px;
-                        background-color: $color-tertiary;
-                        color: #008766;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        text-align: center;
+                        right: 20px;
+                        bottom: 200px;
+                        padding: 7px 9px 7px 9px;
+                        background: $color-tertiary;
                         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
                         border-radius: 2px;
+                        font-weight: 500;
+                        font-size: 14px;
+                        text-align: center;
+                        color: #008766;
                     }
                 }
             }
