--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -123,8 +123,48 @@ a:active {
   font-weight: 400;
   font-size: 28px;
 }
+.main__name__container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+@media (min-width: 1050px) {
+  .main__name__container {
+    margin-left: 30px;
+  }
+}
+.main__name__container__heart {
+  font-size: 24px;
+}
+@media (max-width: 1050px) {
+  .main__name__container__heart {
+    position: relative;
+    left: 35px;
+  }
+}
+.main__name__container__heart-solid {
+  position: relative;
+  left: -25px;
+  font-size: 26px;
+  opacity: 0;
+}
+@media (max-width: 1050px) {
+  .main__name__container__heart-solid {
+    position: relative;
+    left: 10px;
+  }
+}
+.main__name__container__heart-solid:hover {
+  background: linear-gradient(200deg, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 300ms ease-in-out;
+  opacity: 1;
+}
 .main__section {
   padding-bottom: 28px;
+  animation: loading-menu 1s both;
 }
 @media (min-width: 1050px) {
   .main__section {
@@ -147,34 +187,66 @@ a:active {
   padding: 0px;
 }
 .main__section__card {
+  position: relative;
   background-color: white;
   height: 69px;
-  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-  border-radius: 15.0431px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
   margin-bottom: 12px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.main__section__card__title {
-  font-size: 18px;
-  padding-top: 12px;
-  padding-left: 15px;
-}
-.main__section__card__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-left: 15px;
-  padding-bottom: 12px;
-  padding-right: 12px;
-  font-weight: 300;
-  font-size: 15.0431px;
+  align-items: flex-end;
 }
-.main__section__card__description__price {
+.main__section__card:hover > .main__section__card__check {
+  display: block;
+  animation: slide 0.5s ease;
+}
+.main__section__card:hover > .main__section__card__price {
+  animation: slide-price 0.5s ease both;
+}
+.main__section__card__menu {
+  padding: 12px 0px 12px 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.main__section__card__menu__title {
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.main__section__card__menu__description {
+  font-weight: 300;
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.main__section__card__price {
   color: #353535;
   font-weight: 700;
-  font-size: 15.0431px;
+  font-size: 15px;
+  margin: 0px 15px 12px 0px;
+}
+.main__section__card__check {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: none;
+  padding: 0px 15px;
+  background-color: #99E2D0;
+  height: 100%;
+  border-radius: 0 15px 15px 0;
+}
+.main__section__card__check__icon {
+  font-size: 25px;
+  margin-top: 25px;
+  color: white;
+  animation: rotate 0.5s ease-in-out;
 }
 .main__container {
   display: flex;
@@ -200,6 +272,56 @@ a:active {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
+.section2 {
+  animation-delay: 0.2s;
+}
+
+.section3 {
+  animation-delay: 0.4s;
+}
+
+@keyframes loading-menu {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes choose-dish {
+  from {
+    transform: scaleX(1);
+  }
+  to {
+    transform: scaleX(0.8);
+  }
+}
+@keyframes slide {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@keyframes slide-price {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-57px);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* Footer */
 .footer {
   background-color: #353535;
