--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -121,9 +121,43 @@ a {
             font-weight: 400;
             font-size: 28px;
         }
+        &__container{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            @media (min-width: $breakpoint-desktop) {
+                margin-left: 30px;
+            }
+            &__heart {
+                font-size: 24px;
+                @media (max-width: $breakpoint-desktop) {
+                    position: relative;
+                    left: 35px;
+                }
+            }
+            &__heart-solid {
+                position: relative;
+                left: -25px;
+                font-size: 26px;
+                opacity: 0;
+                @media (max-width: $breakpoint-desktop) {
+                    position: relative;
+                    left: 10px;
+                }
+                &:hover {
+                    background: linear-gradient(200deg, $color-primary, $color-secondary);
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;
+                    transition: all 300ms ease-in-out;
+                    opacity: 1;
+                }
+            }
+        }
     }
     &__section {
         padding-bottom: 28px;
+        animation: loading-menu 1s both;
         @media (min-width: $breakpoint-desktop) {
             max-width: 635px;
             width: 635px;
@@ -143,32 +177,63 @@ a {
             padding: 0px;
         }
         &__card {
+            position: relative;
             background-color: white;
             height: 69px;
-            box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-            border-radius: 15.0431px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
             margin-bottom: 12px;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: space-between;
-            &__title {
-                font-size: 18px;
-                padding-top: 12px;
-                padding-left: 15px;
+            align-items: flex-end;
+            &:hover {
+                & > .main__section__card__check {
+                    display: block;
+                    animation: slide 0.5s ease;
+                }
             }
-            &__description {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                padding-left: 15px;
-                padding-bottom: 12px;
-                padding-right: 12px;
-                font-weight: 300;
-                font-size: 15.0431px;
-                &__price {
-                    color: #353535;
-                    font-weight: 700;
-                    font-size: 15.0431px;
+            &__menu {
+                padding: 12px 0px 12px 15px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                &__title {
+                    font-weight: 500;
+                    font-size: 18px;
+                    margin-bottom: 5px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+                &__description {
+                    font-weight: 300;
+                    font-size: 15px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+            &__price {
+                color: #353535;
+                font-weight: 700;
+                font-size: 15px;
+                margin: 0px 15px 12px 0px;
+            }
+            &__check {
+                position: absolute;
+                right: 0;
+                top: 0;
+                display: none;
+                padding: 0px 15px;
+                background-color: #99E2D0;
+                height: 100%;
+                border-radius: 0 15px 15px 0;
+                &__icon {
+                    font-size: 25px;
+                    margin-top: 25px;
+                    color: white;
+                    animation: rotate 0.5s ease-in-out;
                 }
             }
         }
@@ -195,6 +260,56 @@ a {
                 box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
             }
         }
+    }
+}
+
+.section2 {
+    animation-delay: 0.2s;
+}
+
+.section3 {
+    animation-delay: 0.4s;
+}
+
+@keyframes loading-menu {
+    from {
+        transform: translateY(30px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes choose-dish {
+    from {
+        transform: scaleX(1)
+    }
+
+    to {
+        transform: scaleX(0.8);
+    }
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(45deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
 
