--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -182,6 +182,7 @@ header, main {
 .description__button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  transition: all 300ms ease-in-out;
 }
 
 .fonctionnement {
@@ -294,6 +295,7 @@ header, main {
   }
 }
 .main__section__card {
+  background-color: white;
   width: 100%;
   height: 251px;
   margin-bottom: 15px;
