--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -186,6 +186,7 @@ header, main {
         &:hover {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, $color-primary -5.2%, $color-secondary 110.74%);
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+            transition: all 300ms ease-in-out;
         }
     }
 }
@@ -287,6 +288,7 @@ header, main {
             padding-bottom: 0px;
         }
         &__card {
+            background-color: white;
             width: 100%;
             height: 251px;
             margin-bottom: 15px;
