--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -254,6 +254,9 @@ a:active {
   justify-content: center;
 }
 .main__container__button {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
   color: white;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   border: none;
@@ -271,6 +274,7 @@ a:active {
 .main__container__button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  transition: all 300ms ease-in-out;
 }
 
 .section2 {
