--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -246,6 +246,9 @@ a {
         display: flex;
         justify-content: center;
         &__button {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 500;
             color: white;
             background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
             border: none;
@@ -262,6 +265,7 @@ a {
             &:hover {
                 background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, $color-primary -5.2%, $color-secondary 110.74%);
                 box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+                transition: all 300ms ease-in-out;
             }
         }
     }
